feat: embed static files
Added a static directory with all the static files. I use rust-embed and
axum-embed (which is just a wrapper around rust-embed) to embed all the
static files in the binary. This helps fulfill my goal of keeping the
whole website two files for easy deployment.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 askama = "0.12.1"
 axum = "0.7.7"
+axum-embed = "0.1.0"
 dotenvy = "0.15.7"
 rust-embed = "8.5.0"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
