--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ dotenvy = "0.15.7"
 rust-embed = "8.5.0"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.41.0", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
