--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-askama = "0.12.1"
 axum = "0.7.7"
 axum-embed = "0.1.0"
 dotenvy = "0.15.7"
+lazy_static = "1.5.0"
 rust-embed = "8.5.0"
+serde = { version = "1.0.217", features = ["serde_derive"] }
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
+tera = "1.20.0"
 tokio = { version = "1.41.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["trace"] }
 tracing = "0.1.41"
