fix: embed tera templates correctly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 axum = "0.7.7"
 axum-embed = "0.1.0"
 dotenvy = "0.15.7"
+include_dir = "0.7.4"
 lazy_static = "1.5.0"
 rust-embed = "8.5.0"
 serde = { version = "1.0.217", features = ["serde_derive"] }
