--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.98"
 axum = "0.7.7"
 axum-embed = "0.1.0"
 dotenvy = "0.15.7"
@@ -11,6 +12,7 @@ include_dir = "0.7.4"
 lazy_static = "1.5.0"
 rust-embed = "8.5.0"
 serde = { version = "1.0.217", features = ["serde_derive"] }
+serde_json = { version = "1.0.140", features = ["raw_value"] }
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
 tera = "1.20.0"
 tokio = { version = "1.43.1", features = ["full"] }
