--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ axum-embed = "0.1.0"
 dotenvy = "0.15.7"
 include_dir = "0.7.4"
 lazy_static = "1.5.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = { version = "0.30.0", features = ["bundled"] }
+rusqlite = { version = "0.36.0", features = ["bundled"] }
 rust-embed = "8.5.0"
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = { version = "1.0.140", features = ["raw_value"] }
-sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
 tera = "1.20.0"
 tokio = { version = "1.43.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["trace"] }
