--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2021"
 anyhow = "1.0.98"
 axum = "0.7.7"
 axum-embed = "0.1.0"
+chrono = { version = "0.4.41", features = ["serde"] }
 dotenvy = "0.15.7"
 include_dir = "0.7.4"
 lazy_static = "1.5.0"
 r2d2 = "0.8.10"
 r2d2_sqlite = { version = "0.30.0", features = ["bundled"] }
-rusqlite = { version = "0.36.0", features = ["bundled"] }
+regex = "1.11.1"
+rusqlite = { version = "0.36.0", features = ["bundled", "unlock_notify"] }
 rust-embed = "8.5.0"
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = { version = "1.0.140", features = ["raw_value"] }
