--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.98"
 axum = "0.7.7"
 axum-embed = "0.1.0"
+build_id = { git = "https://github.com/realprogrammersusevim/build_id.git" }
 chrono = { version = "0.4.41", features = ["serde"] }
 dotenvy = "0.15.7"
 include_dir = "0.7.4"
