--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rusqlite = { version = "0.36.0", features = ["bundled", "unlock_notify"] }
 rust-embed = "8.5.0"
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = { version = "1.0.140", features = ["raw_value"] }
+sqlite-vec = "0.1.6"
 tera = "1.20.0"
 tokio = { version = "1.43.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["trace"] }
